tests/ui/borrowck/issue-52713-bug.stderr
error[E0506]: cannot assign to `x` because it is borrowed
  --> $DIR/issue-52713-bug.rs:12:5
   |
LL |     let y = &x;
   |             -- borrow of `x` occurs here
...
LL |     x += 1;
   |     ^^^^^^ assignment to borrowed `x` occurs here
LL |     println!("{}", y);
   |                    - borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0506`.
